--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 <head>
   <meta charset="utf-8">
   <title>Jens Bernardino</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="/stylesheets/styles-homepage.css">
 </head>
 
 <body>
   <header>
-    <h1>Jens Bernardino</h1>
+    <h1 class="title-name">Jens Bernardino</h1>
   </header>
-  <section>
-    <h2>Introduction</h2>
+  <section class="info-section">
+    <h1>Introduction</h1>
+    <a href="page2.html">Front-end-Experience</a>
+    <a href="page3.html">Interesting Pictures</a>
     <p>Hello, my name is Jens Bernardino. I'm a college senior at California
       State University Fullerton and I will be graduating Spring 2019 in May.
       Here are my following interest:</p>
@@ -23,18 +27,6 @@
       <li>Music</li>
     </ul>
   </section>
-  <header>
-    <h1>Front-end Development experience?</h1>
-    <a href="page2.html">
-      <span>page2</span>
-    </a>
-  </header>
-  <header>
-    <h1>Interesting Pictures</h1>
-    <a href="page3.html">
-      <span>page3</span>
-    </a>
-  </header>
 
 </body>
 
