--- a/page3.html
+++ b/page3.html
@@ -4,30 +4,31 @@
 <head>
   <meta charset="utf-8">
   <title>Interesting Pictures</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="/stylesheets/styles-pictures.css">
 </head>
 
 <body>
   <header>
-    <h1>Interesting Pictures</h1>
+    <h1 class="title-text">Interesting Pictures</h1>
   </header>
   <ul>
-    <li>
-      <img src="images/Pogi.JPG" alt="My dog Pogi">
-      <span>My Dog Pogi!</span>
+    <li class="thumbnail-item">
+      <img class="thumbnail-image" src="images/Pogi.JPG" alt="My dog Pogi">
+      <span class="thumbnail-title">My Dog Pogi!</span>
     </li>
-    <li>
-      <img src="images/Sundae.JPG" alt="My dog Sundae">
-      <span>My dog Sundae!</span>
+    <li class="thumbnail-item">
+      <img class="thumbnail-image" src="images/Sundae.JPG" alt="My dog Sundae">
+      <span class="thumbnail-title">My dog Sundae!</span>
     </li>
-    <li>
-      <img src="images/SpongebobMeme.JPG" alt="Spongebob meme about the superbowl">
-      <span>Funny meme that I like. (Plus i love Spongebob)</span>
+    <li class="thumbnail-item">
+      <img class="thumbnail-image" src="images/Snowboarding.jpg" alt="Snowboarding with my brother, Jaycee">
+      <span class="thumbnail-title">Snowboarding with my brother, Jaycee</span>
     </li>
   </ul>
   <footer>
-    <a href="index.html">
-      <span>home</span>
-    </a>
+    <a href="index.html">Home</a>
+    <a href="page2.html">Front-end-Experience</a>
   </footer>
 </body>
 
