--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Front-end Development experience</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="/stylesheets/styles-page2.css">
 </head>
 
 <body>
@@ -14,7 +16,7 @@
     <p>
       I enrolled into CPSC 349 for many reasons:
     </p>
-    <ol>
+    <ol type="A">
       <li>Needed an elective units to graduate</li>
       <li>I heard good things about this course</li>
       <li>I genuinely have an interest in Web Development </li>
@@ -23,11 +25,10 @@
       how it works and how to program but I never tried to learn for myself. I'm hoping to learn how
       to be proficient and possible pursue a career in Web Development!</p>
   </main>
-<footer>
-  <a href="index.html">
-    <span>home</span>
-  </a>
-</footer>
+  <footer>
+    <a href="index.html">Home</a>
+    <a href="page3.html">Interesting Pictures</a>
+  </footer>
 
 
 </body>
